--- a/Dockerfile_dist
+++ b/Dockerfile_dist
@@ -1,5 +1,10 @@
 FROM nginx:1
-MAINTAINER Adam M. Brown <adam.brown@hq.dhs.gov>
+
+# For a list of pre-defined annotation keys and value types see:
+# https://github.com/opencontainers/image-spec/blob/master/annotations.md
+# Note: Additional labels are added by the build workflow.
+LABEL org.opencontainers.image.authors="Adam M. Brown, nicholas.mcdonnell@cisa.dhs.gov"
+LABEL org.opencontainers.image.vendor="Cybersecurity and Infrastructure Security Agency"
 
 COPY nginx.conf /etc/nginx/nginx.conf
 COPY dist /usr/share/nginx/html
