Update the prettier ignore file
Add an ignore for minified JavaScript files. These files are
intentionally minified for distribution and we do not want prettier to
unwind that minification.

Co-authored-by: Shane Frasier <jeremy.frasier@trio.dhs.gov>

--- a/.prettierignore
+++ b/.prettierignore
@@ -2,6 +2,8 @@
 *.json
 # Already being linted by mdl
 *.md
+# We do not want to unminify JavaScript files
+*.min.js
 # Already being linted by yamllint
 *.yaml
 *.yml
