Restore an intentionally minified JSON
This restores a JSON that was pretty formatted to its minified state
and updated the pre-commit configuration to maintain that state. Since
disabling JSON pretty formatting is not something we typically do I
decided to make the exclusion only apply to this specific file and
added a comment directing any future exclusions to be explicit as well.

Co-authored-by: Shane Frasier <maverick@maverickdolphin.com>

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -26,6 +26,9 @@ repos:
       - id: pretty-format-json
         args:
           - --autofix
+        # Any exclusions should be specific as this is not something we
+        # typically do in our projects.
+        exclude: ^src/assets/topo/us\.json$
       - id: requirements-txt-fixer
       - id: trailing-whitespace
 
