Add a `build` job to the GitHub Actions configuration
Add a `build` job to the `build` workflow. This short job will just
ensure that the Docker configuration is able to build successfully.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -98,3 +98,9 @@ jobs:
       - name: Setup tmate debug session
         uses: mxschmitt/action-tmate@v3
         if: env.RUN_TMATE
+  build:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: Build the Docker Compose configuration
+        run: make dev-build
