--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
       - "4200:4200"
       - "9876:9876"
     volumes:
-      - .:/usr/src/app
+      - ./src:/usr/src/app/src
       - dev_node_modules:/usr/src/app/node_modules
       - dev_bower_components:/usr/src/app/bower_components
       - dev_web_assets:/usr/src/app/src/assets/bower
