Update the build job in the build workflow
Update the version of actions/checkout to match what is used in the
lint job. Add a dependency on the diagnostics job and add runner
hardening as the first step for the job. This mirrors changes to the
lint job in the upstream repository.

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -141,8 +141,15 @@ jobs:
         uses: mxschmitt/action-tmate@v3
         if: env.RUN_TMATE
   build:
+    needs:
+      - diagnostics
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - id: harden-runner
+        name: Harden the runner
+        uses: step-security/harden-runner@v2
+        with:
+          egress-policy: audit
+      - uses: actions/checkout@v4
       - name: Build the Docker Compose configuration
         run: make dev-build
